# johnpaton.github.io

./: .doit.db.bak  .doit.db.dir  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  CNAME  Makefile  README.md  archive.html  archives.html  authors.html  build-local.ps1  build-local.sh  categories.html  conf.py  develop_server.sh  index.html  index2.html  install.sh  matplotlib_colors.md  pelicanconf.py  publish.ps1  publish.sh  publishconf.py  pyproject.toml  requirements.txt  robots.txt  rss.xml  serve.ps1  serve.sh  sitemap.xml  sitemapindex.xml  tags.html
.github/workflow/: pelican.yml
.github/workflows/: build.yml  pelican.yml
.well-known/: brave-rewards-verification.txt
404/: index.html
about/: index.html
assets/css/: all-nocdn.css  all.css  bitter.css  code.css  main.css
assets/js/: tag_cloud_data.json
author/: john-paton.html  john-paton2.html
cache/.mako.tmp/: annotation_helper.tmpl.py  archive_navigation_helper.tmpl.py  arusahni_helper.tmpl.py  base.tmpl.py  base_footer.tmpl.py  base_helper.tmpl.py  comments_helper.tmpl.py  comments_helper_disqus.tmpl.py  comments_helper_facebook.tmpl.py  comments_helper_googleplus.tmpl.py  comments_helper_intensedebate.tmpl.py  comments_helper_isso.tmpl.py  comments_helper_livefyre.tmpl.py  comments_helper_muut.tmpl.py  crumbs.tmpl.py  feeds_translations_helper.tmpl.py  gallery.tmpl.py  index.tmpl.py  index_helper.tmpl.py  list_post.tmpl.py  listing.tmpl.py  math_helper.tmpl.py  post.tmpl.py  post_helper.tmpl.py  tag.tmpl.py  tags.tmpl.py
cache/posts/: custom-color-themes-in-matplotlib.html  engl_ish.html  matplotlib_colors.html
categories/: dataviz.xml  index.html  language.xml  markov.xml  matplotlib.xml  nlp.xml  python.xml
category/: misc.html  posts.html  posts2.html
content/: custom-color-themes-in-matplotlib.md  engl_ish.md  periods-since-time-series-events.md
content/pages/: 404.md  (+4 more)
drafts/: airbase.html  calvin-puzzle.html  engl_ish-at-pydata.html  open-source-award.html  redirect-logging.html  remapping-the-world.html
feeds/: all.atom.xml  all.rss.xml  misc.atom.xml
galleries/: rss.xml
listings/: index.html
output/: 404.html  archive.html  archives.html  authors.html  categories.html  custom-color-schemes-in-matplotlib.html  index.html  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml  tags.html
posts/: custom-color-themes-in-matplotlib.md  engl_ish.md
projects/: index.html
scripts/: preview-artifact.py
static/: bar-chart-demo.html  nodes.json  pull-requests.js
styles/: custom.css  post_meta.md.txt
tag/: css.html  d3js.html  data.html  dataviz.html  deep-learning.html  html.html  jinja.html  markov.html  matplotlib.html  natural-language.html  nlp.html  open-source.html  pandas.html  pelican.html  puzzles.html  python.html  snippets.html  spark.html  statistics.html  time-series.html  timeseries.html  web.html
writing-talks/: index.html
(+129 files in other folders)
