[project]
name = "johnpaton-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JohnPaton", email = "john@johnpaton.net" }
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    "pelican-tailwindcss>=0.2.0",  # for tailwind theme
    "pelican>=4.10.1",
    "pytailwindcss>=0.2.0",
    "requests>=2.32.3",
    # for pelican-deadlinks
]

[dependency-groups]
dev = [
    "livereload>=2.7.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]

[tool.ruff]
exclude = [".venv", "themes", "plugins", "output"]

