[project]
name = "johnpaton-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JohnPaton", email = "john@johnpaton.net" }
]
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.7.1",
    "blinker==1.4",
    "bs4==0.0.1",
    "docutils==0.13.1",
    "feedgenerator==1.9",
    "jinja2==2.10.1",
    "markdown==2.6.8",
    "markupsafe==1.*",
    # for tailwind theme
    "pelican==3.7.1",
    "pygments==2.2.0",
    "pytailwindcss>=0.2.0",
    "python-dateutil==2.6.1",
    "pytz==2017.2",
    "requests>=2.32.3",
    "six==1.10.0",
    "soupsieve==1.9",
    "tornado==6.0.2",
    "unidecode==0.4.21",
    # for pelican-deadlinks
]

[dependency-groups]
dev = [
    "livereload>=2.7.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]
constraint-dependencies = [
    "jinja2<3",
#    "MarkupSafe==2.0.1"
]

[tool.ruff]
exclude = [".venv", "themes", "plugins", "output"]

