[project]
name = "johnpaton-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JohnPaton", email = "john@johnpaton.net" }
]
requires-python = ">=3.9"
dependencies = [
    # main requirements
    "pelican~=4.5",
    # markdown/pygments compatibility
    "markdown~=3.2.0", # See https://github.com/Python-Markdown/markdown/blob/master/docs/changelog.md#codehilite-now-always-wraps-with-code-tags
    "pygments~=2.3.0", # See https://github.com/alexandrevicenzi/Flex/issues/119#issuecomment-303151588
    # markupsafe/jinja compatibility
    "jinja2~=2.11",
    "MarkupSafe~=1.1",
    # for plugins
    "requests>=2.32.3", # deadlinks
    "beautifulsoup4>=4.12.3", # deadlinks & post_statks
    "typogrify>=2.0.7",
    "pelican-redirect-url>=0.1.1",
]

[dependency-groups]
dev = [
    "livereload>=2.7.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
    "typer>=0.11.1",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
exclude = [".venv", "themes", "plugins", "output"]

